[gd_scene load_steps=9 format=2]

[ext_resource path="res://data/image/healing_pad.png" type="Texture" id=1]
[ext_resource path="res://data/image/heal_particle.png" type="Texture" id=2]
[ext_resource path="res://data/composite/objects/HealingPad.gd" type="Script" id=3]
[ext_resource path="res://data/composite/objects/DebugHealingPad.gd" type="Script" id=4]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="CanvasItemMaterial" id=2]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.278146, 0.701987, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 13.0986, 13.0185 )

[node name="HealingPad" type="Area2D"]
material = SubResource( 1 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Particles2D" type="CPUParticles2D" parent="."]
material = SubResource( 2 )
position = Vector2( -0.211975, 0 )
z_index = 2
amount = 4
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 10, 10 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 1.0
linear_accel = 10.0
damping = 1.15
damping_random = 0.31
color_ramp = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Debug" type="Control" parent="."]
margin_left = -16.0
margin_top = -18.0
margin_right = 16.0
margin_bottom = 16.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugEnergyBar" type="ColorRect" parent="Debug"]
margin_right = 15.0
margin_bottom = 1.0
color = Color( 0.25098, 0.25098, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugAmount" type="ColorRect" parent="Debug/DebugEnergyBar"]
margin_right = 15.0
margin_bottom = 1.0
color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugDelayBar" type="ColorRect" parent="Debug"]
margin_left = 32.0
margin_right = 47.0
margin_bottom = 1.0
rect_scale = Vector2( -1, 1 )
color = Color( 0.25098, 0.25098, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugAmount" type="ColorRect" parent="Debug/DebugDelayBar"]
margin_right = 15.0
margin_bottom = 1.0
grow_horizontal = 0
color = Color( 0.968627, 0.00392157, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
